test_programs/compile_failure/cyclic_dep/src/main.nr
use dep1::foo;
use dep2::bar;

fn main() {
    dep1::foo();
    dep2::bar();
}
